--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,20 +13,19 @@
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12559549.md#1" title="【一线采访】天津疫情社区传播 一医院被封""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/page-3-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12561391.md#1" title="【重播】川普团队：去除舞弊选票 足以翻转结果""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229683262-1-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://mytgei3586.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>47分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563259.md#1">组图：威斯康星州两县准备重新计票</a><br>
-:clock8: <em>53分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12562321.md#1">美宗教自由大使要求中共停止迫害信仰</a><br>
-:clock8: <em>55分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563361.md#1">蔡英文谴责中共网军 造谣失联飞官投诚</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563259.md#1">组图：威斯康星州两县准备重新计票</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12562321.md#1">美宗教自由大使要求中共停止迫害信仰</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563361.md#1">蔡英文谴责中共网军 造谣失联飞官投诚</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563284.md#1">【大选更新11·20】拜登密州7秒增14万票</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563292.md#1">老师好坏看颜色 浙江温州推“师德码”引争议</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563292.md#1">老师好坏看颜色 浙江温州推“师德码”引争议</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563258.md#1">加边境官：孟晚舟有逃离风险</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12558748.md#1">习近平前脚刚走 南京前首富杨宗义被查</a><br>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12560222.md#1">中共喉舌发长文捧习 分析：个人崇拜再升级</a><br>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12561275.md#1">赵立坚粗口骂五眼联盟 再现战狼本色</a><br>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12559129.md#1">泄导弹机密给中共 雷神华裔工程师被判刑</a><br>
-<a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12560109.md#1">陕西女大学生自杀身亡 遗书指遭系领导猥亵</a><br>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12561355.md#1">拜登阵营丑闻：贿赂内华达原住民 花钱买票</a><br>
-<a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12560058.md#1">【翻墙必看】乔治亚州重新计票的骗局</a><br>
+<a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12560109.md#1">陕西女大学生自杀身亡 遗书指遭系领导猥亵</a><br>
 <br><p align="center"><a href="https://github.com/mytgei3586/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12556030.md#1">【独家】中共培训东南亚国家警官的背后</a><br>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12559715.md#1">田云：劫持美国大选 左派发动中共式超限战</a><br>
@@ -39,7 +38,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 367,874,713 人
+!共 367,875,961 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
