--- a/gb/nf5777.md
+++ b/gb/nf5777.md
@@ -31,7 +31,7 @@
 <tr><td width="742"><h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/10/11/n12468577.md#1" target="_blank">世界粮食计划署获诺奖 学者忧人类缺粮</a><br></h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/10/11/n12468577.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/07/Screenshot-2020-07-30-at-17.41.40-150x120.png" align ="left"></a>今年的诺贝尔和平奖，颁给了联合国食品援助组织下属的世界粮食计划署。近期因为中共病毒疫情肆虐全球以及天灾人祸频发，导致的世界以及中国的粮食问题，再度成为外界关注的焦点。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月13日 1:54 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/10/11/n12468620.md#1" target="_blank">杨威：中共正在输掉与印度的另一场战争</a><br></h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/10/11/n12468620.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1228431712-150x120.jpg" align ="left"></a>各国纷纷从中国移出供应链，真正能提供大量年轻、廉价劳动力的国家，无疑是印度。产量不大的供应链，也可以选择东南亚各国；需要更多劳动力的产业，印度成为首选，这已经是美国、日本、韩国、欧盟、台商的广泛策略。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月12日 5:00 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/10/8/n12460942.md#1" target="_blank">【独家】揭秘大陆敢言网络大V凋零过程</a><br></h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/10/8/n12460942.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/dc3c7e4f7e2642724d71d697e9bd8b1c-600x400-150x120.jpg" align ="left"></a>大V是指微博认证的有知名度的名人，通常把有50万以上“粉丝”的称为网络大V，他们由于拥有大量粉丝的关系，一度对互联网上的言论和话题有相对较大的影响力。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月11日 10:26 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12557769.md#1" target="_blank">哈尔滨一法官被当事人持刀捅死</a><br></h3>中共哈尔滨市双城区法院周家法庭庭长郝剑，近期因一起离婚案件判决被当事人吴德仁持刀捅死。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月18日 3:26 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/10/9/n12465537.md#1" target="_blank">界立建谈非洲经历：中共输出腐败 自食恶果</a><br></h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/10/9/n12465537.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/af333-150x120.jpeg" align ="left"></a>为躲避中共迫害，去年年底，山东维权人士界立建穿越非洲逃亡至美国。此前他在非洲陆地走了7个多月，切身体会到非洲人的善良、纯朴，但中共却给非洲带来了贪污、腐败，破坏生态环境和杀掠野生动物等。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月10日 9:11 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/10/29/n12511069.md#1" target="_blank">甘肃警校学生因言论被处分 知情者揭警校黑幕</a><br></h3>中国甘肃警察职业学院一名学生，因为发表批评“这个混账的国家！混账的教育”等留言，并有“侮辱烈士的言论”，被校方处以留校察看的处分。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月29日 11:06 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/10/10/n12466509.md#1" target="_blank">中共五中全会前 深圳前高官言论引关注</a><br></h3>近期，前中共深圳市委书记厉有为在港媒撰文，呼吁当局要稳定企业家的民心，确保他们的人身财产安全。他警告，中美冲突下，中共犯“左的错误”危害很大。在中共五中全会前，厉有为的言论引关注。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月10日 3:22 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf5777.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/mytgei3586/djy/blob/master/gb/nf5777_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/mytgei3586/djy/blob/master/gb/nf5777_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/mytgei3586/djy/blob/master/gb/nf5777_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/mytgei3586/djy/blob/master/gb/nf5777_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/mytgei3586/djy/blob/master/gb/nf5777_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/mytgei3586/djy/blob/master/gb/nf5777_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/mytgei3586/djy/blob/master/gb/nf5777_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/mytgei3586/djy/blob/master/gb/nf5777_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/mytgei3586/djy/blob/master/gb/nf5777_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/mytgei3586/djy/blob/master/gb/nf5777_2.md#1">下一页</a></h3></td></tr>
